Глобальные улучшения и конфигурация.