@@ -9,12 +9,15 @@ import java.nio.charset.StandardCharsets;
 import net.minecraft.core.net.packet.PacketLogin;
 import net.minecraft.server.net.handler.PacketHandlerLogin;
 import org.slf4j.Logger;
+import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Redirect;
-import org.spongepowered.asm.mixin.Mixin;
+import ru.roughcipher.better_with_elyby.config.BWEBUrls;
 
 @Mixin(value = PacketHandlerLogin.class, remap = false)
 public abstract class PacketHandlerLoginMixin {
+	@Unique
 	private static final Logger LOGGER = LogUtils.getLogger();
 
 	@Redirect(
@@ -30,10 +33,10 @@ public abstract class PacketHandlerLoginMixin {
 		new Thread(() -> {
 			try {
 				String serverId = PacketHandlerLogin.getServerId(self);
-				String encodedUser = URLEncoder.encode(loginPacket.username, "UTF-8");
-				String encodedServerId = URLEncoder.encode(serverId, "UTF-8");
+				String encodedUser = URLEncoder.encode(loginPacket.username, StandardCharsets.UTF_8);
+				String encodedServerId = URLEncoder.encode(serverId, StandardCharsets.UTF_8);
 
-				URL url = new URL("https://authserver.ely.by/session/legacy/hasJoined?user=" + encodedUser + "&serverId=" + encodedServerId);
+				URL url = new URL(BWEBUrls.SESSION_HAS_JOINED_URL + encodedUser + "&serverId=" + encodedServerId);
 
 				BufferedReader bufferedreader = new BufferedReader(new InputStreamReader(url.openStream(), StandardCharsets.UTF_8));
 				String response = bufferedreader.readLine();
